configs/homework-database-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: homework
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
