configs/homework-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: homework
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
