configs/default-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: homework
spec:
  podSelector: {}
  policyTypes:
    - Egress
